welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:4: error: Missing closing brace `}' assumed here
def hunt() {
^